fixed margins on small screens with about page, skills, and education

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,6 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
+	position: "relative";
 }
 
 .footer {
